pkg/templates/charts/toggle/flight-control/templates/allow-from-flightctl-networkpolicy.yaml

# Source: flightctl/templates/flightctl-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-flightctl
  namespace:  open-cluster-management
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - open-cluster-management
          - open-cluster-management
          - openshift-console
      podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
